deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logpush-proxy
  name: logpush-proxy
  namespace: cf-logs-test-martyn
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8787
  selector:
    app: logpush-proxy
