deploy/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/ssl-cert: "meisterlabs-com-cloudflare-2033-06-03"
    ingress.gcp.kubernetes.io/pre-shared-cert: "meisterlabs-com-cloudflare-2033-06-03"
  labels:
  name: logpush-ingress
spec:
  rules:
  - host: logpush-ops-staging.meisterlabs.com
    http:
      paths:
      - backend:
          service:
            name: logpush-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
